# favorite_libs

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  setup.bash
example/: CMakeLists.txt  abseil_string.cpp  main.cpp
mcts/: CMakeLists.txt  mcts.cpp
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/tests/: CMakeLists.txt  test_sample.cc
src_py/: Pipfile  pyproject.toml
src_py/calculator/: __init__.py
src_py/tests/: test_calculator.py  test_favorite_libs_py.py
